--- a/questions.html
+++ b/questions.html
@@ -32,17 +32,17 @@
                 </address>
               </div>
               <div class="col-md-6">
-                <p class="stay-in-touch">Please Stay in Touch!</p>
-                  <br>
-                  <br>
-                <p id="phone-text">Phone: (847) 254 - 1201</p>
-                  <br>
-                <p class="stay-in-touch">And Connect With Me on Social Media:</p>
-                <span>
-                    <a href="https://www.linkedin.com/in/stephany-prodromos/" target="_blank"><img  id="linkedin" src="image/linkedin.png"/></a>
-                    <a href="https://www.facebook.com/stephany.prodromos" target="_blank"><img  id="fb-insta" src="image/facebook.png"/></a>
-                    <a href="https://www.instagram.com/stephanoulaa/?hl=en" target="_blank"><img  id="fb-insta" src="image/instagram.png"/></a>
-                </span>
+                  <div class="column2">
+                    <p class="stay-in-touch">Please Stay in Touch!</p>
+                    <p id="phone-text">Phone: (847) 254 - 1201</p>
+                    <p class="stay-in-touch">And Connect With Me on Social Media:</p>
+                    <span>
+                        <a href="https://www.linkedin.com/in/stephany-prodromos/" target="_blank"><img  id="linkedin" src="image/linkedin.png"/></a>
+                        <a href="https://github.com/stephanoulaa" target="_blank"><img  id="fb-insta" src="image/github.png"/></a>
+                        <a href="https://twitter.com/stephanoula96" target="_blank"><img  id="fb-insta" src="image/twitter.jpg"/></a>
+                        <a href="https://www.facebook.com/stephany.prodromos" target="_blank"><img  id="fb-insta" src="image/facebook.png"/></a>
+                    </span>
+                </div>
               </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
         <footer class="footer">
             <div class="container">
                 <span class="text-muted">
-                    <p class="powered-by">Powered By Frappés <img id="gr-flag" src="flag.svg"/></p>
+                    <p class="powered-by">Powered By Frappés <img id="gr-flag" src="image/flag.svg"/></p>
                 </span>
             </div>
         </footer>
