--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
             <h4>Know exactly when to purchase any items in your Bitcoin wishlist!</h4>
         </div>
         <div class="image">
-            <img id="blockchain" src="blockchain.jpg"/>
+            <img id="blockchain" src="image/blockchain.jpg"/>
         </div>
         <div class="row">
             <div class="col-md-6">
