--- a/merchant-map.html
+++ b/merchant-map.html
@@ -33,7 +33,7 @@
         <footer class="footer">
             <div class="container">
                 <span class="text-muted">
-                    <p class="powered-by">Powered By Frappés <img id="gr-flag" src="flag.svg"/></p>
+                    <p class="powered-by">Powered By Frappés <img id="gr-flag" src="image/flag.svg"/></p>
                 </span>
             </div>
         </footer>
