--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
             <h1>Welcome to Your Boulder Bit Bag!</h1>
             <h4>Know exactly when to purchase any items in your Bitcoin wishlist!</h4>
         </div>
+        <br>
         <div class="image">
             <img id="blockchain" src="image/blockchain.jpg"/>
         </div>
@@ -32,6 +33,15 @@
                 </form>
             </div>
         </div>
+        <br>
+        <br>
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">
+                    <p></p>
+                </span>
+            </div>
+        </footer>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
