--- a/questions.html
+++ b/questions.html
@@ -5,6 +5,7 @@
         <!--my stylesheet-->
         <link rel="stylesheet" href="questions.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+        <link rel="shortcut icon" type="image/png" href="image/sigma.png">
     </head>
     <body>
         
