--- a/wishlist.html
+++ b/wishlist.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         
-        <h1 id="header">WELCOME TO YOUR BIT BAG</h1>
+        <div>
+            <h1 id="header">WELCOME TO YOUR BIT BAG</h1>
+            <button id='validate' type="button" class="btn btn-warning"><a id="link" href="/logout">LOG OUT</a></button>
+        </div>
         
         <div class="nav">
             <nav class="navbar navbar-light bg-faded">
