--- a/questions.html
+++ b/questions.html
@@ -26,11 +26,10 @@
         
         <!--contact info w/pic, links to: github, fb, linkedin, twitter-->
         
-        <!--ADD TWITTER ICON, AND TRANSFER ALL 4 PICS!!!!!!!!!!!!!-->
         <div class="contact-page">
             <div class="row">
               <div class="col-md-6">
-                <p id="questions">Questions? Click below to send me an email!</p>
+                <p id="questions">Click below to send me an email!</p>
                 <address>
                     <a href="mailto:stephprodromos@gmail.com"><img id="vegas" src="image/vegas.jpg"/></a>
                 </address>
