--- a/login.html
+++ b/login.html
@@ -8,34 +8,35 @@
         <link rel="shortcut icon" type="image/png" href="image/sigma.png">
     </head>
     <body>
-        <div class="headers">
-            <h1>Welcome to Your Boulder Bit Bag!</h1>
-            <h4>Know exactly when to purchase any items in your Bitcoin wishlist!</h4>
-        </div>
-        <br>
-        <div class="image">
-            <img id="blockchain" src="image/blockchain.jpg"/>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <h1>Sign Up:</h1>
-                <form id="signup-form">
-                    <input class="username" placeholder="username">
-                    <input class="password" placeholder="password">
-                    <input type="submit" value="Submit!">
-                </form>
+            <div class="headers">
+                <h1>Welcome to Your Boulder Bit Bag!</h1>
+                <h4>Know where and when to buy anything on your Bitcoin Wishlist!</h4>
             </div>
-            <div class="col-md-6">
-                <h1>Log In:</h1>
-                <form id="login-form">
-                    <input class="username" placeholder="username">
-                    <input class="password" placeholder="password">
-                    <input type="submit" value="Submit!">
-                </form>
+            <br>
+            <!--sign up, log in-->
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Sign Up:</h1>
+                    <form id="signup-form">
+                        <input class="username" placeholder="username">
+                        <input class="password" placeholder="password">
+                        <input type="submit" value="Submit!">
+                    </form>
+                </div>
+                <div class="col-md-6">
+                    <h1>Log In:</h1>
+                    <form id="login-form">
+                        <input class="username" placeholder="username">
+                        <input class="password" placeholder="password">
+                        <input type="submit" value="Submit!">
+                    </form>
+                </div>
             </div>
-        </div>
-        <br>
-        <br>
+            <br>
+            <br>
+            <!--image??-->
+        <img id="world" src="image/world.jpg"/>
+<!--
         <footer class="footer">
             <div class="container">
                 <span class="text-muted">
@@ -43,6 +44,7 @@
                 </span>
             </div>
         </footer>
+-->
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
