--- a/merchant-map.html
+++ b/merchant-map.html
@@ -38,7 +38,7 @@
         <a href="https://coinmap.org/#/world/39.36827915/48.16406250/2" target="_blank"><img id="coinmap" src="image/coinmap.png"/></a>
         <br>
         <!--get bitcoin atm API to display map-->
-        <h3 class="header2">See Where You Can Obtain Bitcoin All Around the World...</h3>
+        <h3 class="header2">See Where You Can Obtain Bitcoin For Cash All Around the World...</h3>
         <br>
 <!--            <div id="map"></div>-->
         <!--FOR REFERENCE: A bitcoin ATM is an internet machine that allows a person to exchange bitcoins and cash. ... Bitcoin kiosks are machines which are connected to the Internet, allowing the insertion of cash in exchange for bitcoins given as a paper receipt or by moving money to a public key on the blockchain.-->
