--- a/login.html
+++ b/login.html
@@ -8,34 +8,44 @@
         <link rel="shortcut icon" type="image/png" href="image/sigma.png">
     </head>
     <body>
+        
+            <div class="plate">
+              <p class="script"><span>Boulder</span></p>
+              <p class="shadow text1">Welcome To Your</p>
+              <p class="shadow text2">BIT</p>
+              <p class="shadow text3">BAG!</p>
+              <p class="script"><span>by Stephany</span></p>
+            </div>
+<!--
             <div class="headers">
                 <h1>Welcome to Your Boulder Bit Bag!</h1>
                 <h4>Know where and when to buy anything on your Bitcoin Wishlist!</h4>
             </div>
             <br>
+-->
             <!--sign up, log in-->
             <div class="row">
                 <div class="col-md-6">
                     <h1>Sign Up:</h1>
                     <form id="signup-form">
                         <input class="username" placeholder="username">
-                        <input class="password" placeholder="password">
-                        <input type="submit" value="Submit!">
+                        <input class="password" type="password" placeholder="password"  size="25">
+                        <input class="submit" type="submit" value="Submit!">
                     </form>
                 </div>
                 <div class="col-md-6">
                     <h1>Log In:</h1>
                     <form id="login-form">
                         <input class="username" placeholder="username">
-                        <input class="password" placeholder="password">
-                        <input type="submit" value="Submit!">
+                        <input class="password" placeholder="password" type="password" size="25">
+                        <input class="submit" type="submit" value="Submit!">
                     </form>
                 </div>
             </div>
             <br>
             <br>
             <!--image??-->
-        <img id="world" src="image/world.jpg"/>
+<!--        <img id="world" src="image/world-map.jpg"/>-->
 <!--
         <footer class="footer">
             <div class="container">
