--- a/login.html
+++ b/login.html
@@ -8,6 +8,12 @@
         <link rel="shortcut icon" type="image/png" href="image/sigma.png">
     </head>
     <body>
+            <!--for background image-->
+<!--            <div class="background"></div>-->
+        
+            <div class="background">
+                <img src="image/world-map.jpg"/>
+            </div>
         
             <div class="plate">
               <p class="script"><span>Boulder</span></p>
