--- a/questions.html
+++ b/questions.html
@@ -10,7 +10,7 @@
     <body>
         
         <div>
-            <h1 id="header">WELCOME TO YOUR BIT BAG</h1>
+            <h1 id="header">WELCOME TO YOUR PERSONAL <span class="glyphicon glyphicon-bitcoin"></span>IT <span class="glyphicon glyphicon-bitcoin"></span>AG!</h1>
             <button id='validate' type="button" class="btn btn-warning"><a id="link" href="/logout">LOG OUT</a></button>
         </div>
         
