--- a/wishlist.html
+++ b/wishlist.html
@@ -19,7 +19,7 @@
         <div class="nav">
             <nav class="navbar navbar-light bg-faded">
                 <a class="navbar-brand" href="dashboard.html">HOME</a>
-                <a class="navbar-brand" href="wishlist.html">WISHLIST</a>
+                <a class="navbar-brand" href="wishlist.html">MY BIT BAG</a>
                 <a class="navbar-brand" href="merchant-map.html">MERCHANT MAP</a>
                 <a class="navbar-brand" href="questions.html">QUESTIONS?</a>
             </nav>
